Related: fdo#66400 take uppercase of first field token

Change-Id: I0a996ce1b8cd520ddf3911bc80923b20a28fa1a4